alignment fix

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -525,7 +525,7 @@ input[type="number"] {
       display: none;
     }
   }
-  .navAlign{
+  .tabExtraFix{
     .ant-tabs > .ant-tabs-nav{
       position: relative;
       flex: none;
